more slash command stuff
added jetspotter stats
separated guild and global commands
combined 'restart' and 'hardrestart'

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "tsc",
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
-    "restart": "npm run build && sudo systemctl restart discordbot"
+    "restart": "npm run build && sudo systemctl restart discordbot",
+    "regcommands": "node dist/bot/regCommands.js"
   },
   "dependencies": {
     "@discordjs/rest": "^2.6.0",
